--- a/packages/sdk-js/package.json
+++ b/packages/sdk-js/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.4",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "npx tsc",
     "dev": "tsc --watch",
