--- a/apps/processor/package.json
+++ b/apps/processor/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clickhouse/client": "^1.11.2",
     "dotenv": "^16.5.0",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "perf_hooks": "^0.0.1"
   }
 }
